Bug 63577 - Can not do "newfs" vinum volume larger than 1TB
Summary: Can not do "newfs" vinum volume larger than 1TB
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: misc (show other bugs)
Version: 5.2.1-RELEASE
Hardware: Any Any
: Normal Affects Only Me
Assignee: le
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-03-01 08:40 UTC by Masaki Takakashi
Modified: 2004-03-09 12:47 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Masaki Takakashi 2004-03-01 08:40:14 UTC
I can not do "newfs" vinum volume larger than 1TB.

# newfs -O2 -U /dev/vinum/vinum0
/dev/vinum/vinum0: 1168806.9MB (2393716440 sectors) block size 16384, fragment s
ize 2048
        using 6361 cylinder groups of 183.77MB, 11761 blks, 23552 inodes.
        with soft updates
newfs: can't read old UFS1 superblock: read error from block device: Invalid arg
ument

How-To-Repeat: 1. Create the vinum volume larger than 1TB. (Any RAID level. I tested "concat" and "RAID5").
2. Do newfs.
Comment 1 le freebsd_committer freebsd_triage 2004-03-06 12:45:23 UTC
Responsible Changed
From-To: freebsd-bugs->le

I'll handle this.
Comment 2 le freebsd_committer freebsd_triage 2004-03-09 12:46:59 UTC
State Changed
From-To: open->closed

This bug is fixed in vinumrequest.c rev. 1.72; thanks for pointing this out!