Fix an integer overflow when dealing with very large volumes.  This bug prevented newfs to work on volumes that are larger than 1TB.

PR:             63577
Submitted by:   Masaki Takakashi <mtakahashi@se.gtd.cosmo.co.jp>
Approved by:    grog (mentor), bde

Former-commit-id: e458843a75e3a842dcddaec094fe529681c4fa51